--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "tart.run",
     "virtual machine"
   ],
-  "license": "SEE LICENSE IN bin/LICENSE",
+  "license": "bin/LICENSE",
   "author": "David Rosenberg <david@dgrdev.com>",
   "homepage": "https://github.com/targendaz2/tart-run#readme",
   "repository": {
